--- a/index.html
+++ b/index.html
@@ -3,19 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Vuet</title>
+
+    <style>
+        .is-loading {
+            color: red;
+        }
+    </style>
 </head>
 <body>
 
 
 <div id="root">
-
-    <input type="text" v-model="newName">
-    <button @click="addName">Add name</button>
-
-    <ul>
-        <li v-for="name in names" v-text="name"></li>
-    </ul>
-
+    <button @click="toggleClass" :disabled="isDisabled" :class="{'is-loading': isLoading}">Click me</button>
 </div>
 
 
@@ -25,14 +24,14 @@
     new Vue({
         el: '#root',
         data: {
-            names: ['Joe', 'Mary', 'Ted', 'Mike'],
-            newName: ''
+            isLoading: false,
+            isDisabled: false
         },
 
         methods: {
-            addName() {
-                this.names.push(this.newName);
-                this.newName = '';
+            toggleClass() {
+                this.isLoading = true;
+                this.isDisabled = true;
             }
         }
     });
