Make task-list Vue component

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 
 
 <div id="root">
-    <task>Go to the store</task>
-    <task>Go to the bank</task>
-    <task>Go to work</task>
+    <task-list></task-list>
 </div>
 
 
