Make dismissible message Vue component

--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
             font-family: sans-serif;
         }
     </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css" integrity="sha512-IgmDkwzs96t4SrChW29No3NXBIBv8baW490zk5aXvhCD8vuZM3yUSkbyTBcXohkySecyzIrUwiF/qV0cuPcL3Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
 
-<div id="root">
-    <task-list></task-list>
+<div id="root" class="container">
+    <message title="Hello World" body="Lorem ipsum dolor sit amet."></message>
+    <message title="Hello Universe" body="Lorem ipsum dolor sit amet."></message>
 </div>
 
 
